force-app/main/default/objects/Excel_Column_Mapping__c/Excel_Column_Mapping__c.object-meta.xml
<CustomObject>
    <label>Excel Column Mapping</label>
    <nameField>
        <displayFormat>MAP-{000000}</displayFormat>
        <label>Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Excel Column Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>