force-app/main/default/objects/Excel_Column_Mapping__c/fields/Config__c.field-meta.xml
<CustomField>
    <fullName>Config__c</fullName>
    <label>Config</label>
    <referenceTo>Excel_Import_Config__c</referenceTo>
    <relationshipLabel>Column Mappings</relationshipLabel>
    <relationshipName>ColumnMappings</relationshipName>
    <type>MasterDetail</type>
</CustomField>