force-app/main/default/objects/Excel_Column_Mapping__c/fields/Excel_Column__c.field-meta.xml
<CustomField>
    <fullName>Excel_Column__c</fullName>
    <label>Excel Column</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>