force-app/main/default/objects/Excel_Column_Mapping__c/fields/Excel_Column_Index__c.field-meta.xml
<CustomField>
    <fullName>Excel_Column_Index__c</fullName>
    <label>Excel Column Index</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>