force-app/main/default/objects/Excel_Column_Mapping__c/fields/Ignore_If_Blank__c.field-meta.xml
<CustomField>
    <fullName>Ignore_If_Blank__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore If Blank</label>
    <type>Checkbox</type>
</CustomField>