force-app/main/default/objects/Excel_Column_Mapping__c/fields/Salesforce_Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Field_Label__c</fullName>
    <label>Salesforce Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>