force-app/main/default/objects/Excel_Column_Mapping__c/fields/Trim_Value__c.field-meta.xml
<CustomField>
    <fullName>Trim_Value__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Trim Value</label>
    <type>Checkbox</type>
</CustomField>